--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-basic",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,12 +12,7 @@
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.6",
-    "expo-router": "~5.1.6",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.7",
-    "expo-constants": "~17.1.7"
+    "react-native": "0.79.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
