--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "^54.0.6",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
-    "react-native": "^0.81.4"
+    "react-native": "^0.81.4",
+    "@expo/vector-icons": "^15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
